<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>bcolyn.sonartest</groupId>
  <artifactId>sonartest</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>
  <description>
    Small test for cross-module code coverage
  </description>
  <modules>
    <module>core</module>
    <module>integration-test</module>
  </modules>

  <properties>
    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
    <sonar.jacoco.reportPath>${user.dir}/target/jacoco.exec</sonar.jacoco.reportPath>
    <sonar.language>java</sonar.language>
    <argLine/>
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>1.6</source>
            <target>1.6</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.9</version>
          <configuration>
            <forkMode>always</forkMode>
            <argLine>-Xmx1000m -XX:MaxPermSize=196m ${argLine} ${jacocoArgs}</argLine>
            <systemPropertyVariables>
              <lily.lilyproxy.mode>${lily.lilyproxy.mode}</lily.lilyproxy.mode>
              <lily.test.log>${lily.test.log}</lily.test.log>
              <model.features>1</model.features>
            </systemPropertyVariables>
            <excludes>
              <exclude>**/integration/*.java</exclude>
            </excludes>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <!-- fallback, so tools don't complain about missing jacocoArgs -->
      <id>no-sonar</id>
      <activation>
        <property>
          <name>!sonar.prepare</name>
        </property>
      </activation>
      <properties>
        <jacocoArgs/>
      </properties>
    </profile>
    <profile>
      <!--  activate via -D sonar.prepare -->
      <id>prepare-sonar</id>
      <activation>
        <property>
          <name>sonar.prepare</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>0.7.0.201403182114</version>
            <configuration>
              <destFile>${sonar.jacoco.reportPath}</destFile>
              <append>true</append>
              <propertyName>jacocoArgs</propertyName>
            </configuration>
            <executions>
              <execution>
                <id>agent</id>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>